--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                      <!-- begin icons and contact info --> 
                      <div class = "icon-links">
                         <small> <i class="fa fa-phone" aria-hidden="true"></i> 555-345-6678</small><br>
-                        <small> <i class="fa fa-envelope" aria-hidden="true"></i> info@janedoe.com</> </small> <br>
+                        <small> <i class="fa fa-envelope" aria-hidden="true"></i> info@wilsonchen.com</> </small> <br>
                         <!-- change the url in the following to link to your github and linkedin accounts respectively --> 
                         <small> <a href="https://www.github.com"><i class="fa fa-github" aria-hidden="true"></i> </a> JaneDoe </small> <br>
                         <small> <a href="https://www.linkedin.com"> <i class="fa fa-linkedin" aria-hidden="true"></i> </a> LinkedIn </small>
@@ -54,40 +54,40 @@
                      <!-- begin Java --> 
                      <small>Java</small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                           90%
+                        <div class="progress-bar progress-skills" role="progressbar" aria-valuenow="110" aria-valuemin="0" aria-valuemax="100" style="width:110%">
+                           110%
                         </div>
                      </div>
                      <!-- end Java -->
                      <!-- begin Scala --> 
                      <small>Scala </small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                           80%
+                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
+                           10%
                         </div>
                      </div>
                      <!-- end Scala --> 
                      <!-- begin Python -->
                      <small>Python</small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                           70%
+                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">
+                           25%
                         </div>
                      </div>
                      <!-- end Python -->
                      <!-- begin C --> 
                      <small>C</small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                           70%
+                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                           40%
                         </div>
                      </div>
                      <!-- end C --> 
                      <!-- begin SQL --> 
                      <small>SQL</small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                           60%
+                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="00" aria-valuemin="0" aria-valuemax="100" style="width:00%">
+                           00%
                         </div>
                      </div>
                      <!-- card-block --> 
