--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                      <h4> Education </h4>
                      <p id ="school-name" style="text-align:left;">
                         Umass Amherst B.S Computer Science
-                        <span style="float:middle;">  <small class ="date"> May 2020 </small> </span>
+                        <span style="text-align: right;">  <small class ="date"> May 2020 </small> </span>
                      </p>
                      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   </div>
