--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
                      <!-- change to your name--> 
                      <h2 class="card-title" style="text-align: left "> Wilson Chen</h2>
                      <!-- give yourself a title --> 
-                     <p class="card-text" style ="text-align: left">Full Stack Engineer</p>
+                     <p class="card-text" style ="text-align: left">Computer Enthusiast</p>
                      <!-- give a brief description about yourself--> 
                      <small> A few words about me </small>
                      <hr />
                      <h4> Contact </h4>
                      <!-- begin icons and contact info --> 
                      <div class = "icon-links">
-                        <small> <i class="fa fa-phone" aria-hidden="true"></i> 555-345-6678</small><br>
+                        <small> <i class="fa fa-phone" aria-hidden="true"></i> 617-833-2514</small><br>
                         <small> <i class="fa fa-envelope" aria-hidden="true"></i> info@wilsonchen.com</> </small> <br>
                         <!-- change the url in the following to link to your github and linkedin accounts respectively --> 
-                        <small> <a href="https://www.github.com"><i class="fa fa-github" aria-hidden="true"></i> </a> JaneDoe </small> <br>
+                        <small> <a href="https://github.com/WilsonHalChen"><i class="fa fa-github" aria-hidden="true"></i> </a> Wilson Chen </small> <br>
                         <small> <a href="https://www.linkedin.com"> <i class="fa fa-linkedin" aria-hidden="true"></i> </a> LinkedIn </small>
                      </div>
                      <!-- end icons --> 
@@ -54,16 +54,16 @@
                      <!-- begin Java --> 
                      <small>Java</small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills" role="progressbar" aria-valuenow="110" aria-valuemin="0" aria-valuemax="100" style="width:110%">
-                           110%
+                        <div class="progress-bar progress-skills" role="progressbar" aria-valuenow="110" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                           90%
                         </div>
                      </div>
                      <!-- end Java -->
                      <!-- begin Scala --> 
                      <small>Scala </small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
-                           10%
+                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                           0%
                         </div>
                      </div>
                      <!-- end Scala --> 
@@ -78,8 +78,8 @@
                      <!-- begin C --> 
                      <small>C</small>
                      <div class="progress">
-                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-                           40%
+                        <div class="progress-bar progress-skills"" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:10%">
+                           10%
                         </div>
                      </div>
                      <!-- end C --> 
@@ -133,7 +133,7 @@
                      <h4> Education </h4>
                      <p id ="school-name" style="text-align:left;">
                         Umass Amherst B.S Computer Science
-                        <span style="text-align: right;">  <small class ="date"> May 2020 </small> </span>
+                        <span style="float: right;">  <small class ="date"> May 2020 </small> </span>
                      </p>
                      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   </div>
