--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                   <div class="card-block">
                      <h4> Education </h4>
                      <p id ="school-name" style="text-align:left;">
-                        Umass Amherst B.S Computer Science
+                        University of Massachusetts Amherst B.S Computer Science
                         <span style="float: right;">  <small class ="date"> May 2020 </small> </span>
                      </p>
-                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                     <p> Learned Java in school. Some Python and HTML/CSS are self-taught as side hobbies.</p>
                   </div>
                </div>
                <br>
@@ -146,10 +146,11 @@
                      <h4> Projects</h4>
                      <!-- begin project 1 --> 
                      <p id ="project-name" style="text-align:left;">
-                        CSV Parser 
+                        Random Projects 
                         <span style="float:right;">   <small class ="date"> May 2020 </small> </span>
                      </p>
-                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                     <p> <b>PITCH (Predicting Instruments by Transforming Collections of Harmonics)</b> 
+                     Despite the mediocre acronym for a title, this hackathon project was awesomely exhillarating. As my first hackathon, I came to HackUMass IV not knowing what to expect. </p>
                      <!-- end of project 1 --> 
                   </div>
                </div>
